# BigOS

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
CMake/: preset-mixins.json
docs/doxygen/: groups.dox
docs/source/pages/api/libs/stdbigos/: clock.rst  index.rst  version.rst
docs/source/pages/bigos/general/: versioning.rst
include/dt/: dt.h
include/hal/: memory_regions.h
include/stdbigos/: clock.h  sbi_utils.h  types.h  version.h
src/example_dtree/: CMakeLists.txt
src/example_sbi/: CMakeLists.txt  entry.c
src/kernel/: CMakeLists.txt
src/kernel/address_space/: address_space.h
src/kernel/clock/: clock.c  clock.h
src/kernel/hal/: hal.c
src/kernel/hal/arch/riscv/: address_space.c  memory_region.c  timer.c  trap.c  trap.h
src/kernel/hal/include/: address_space.h  timer.h
src/kernel/memory_management/physical_memory/: manager.c
src/lib/: CMakeLists.txt
src/lib/dt/: CMakeLists.txt  dt_access.c
src/lib/hal/arch/riscv/: memory_region.c  timer.c
src/lib/startup/: startup.c
src/lib/stdbigos/: clock.c  version.c
tests/: CMakeLists.txt
tests/kernel/memory_management/physical_memory/: CMakeLists.txt  test_allocator.c  test_hal_memory_regions.c
